xfsprogs-2.8.xx (??)
	- Fix up the ring command in xfs_db,
	  thanks to Utako Kusaka

xfsprogs-2.8.13 (21 September 2006)
	- Fix v2 directory checking with holes and unreadable blocks.
	- Fix a memory leak in dir2 checking.
	- Update libdisk/md support to work out the stripe width
	  based on (# raid-disks - # parity disks) which
	  doesn't include any spare disks (which we mistakenly did before).
	  Thanks to Shailendra Tripathi's suggestions.
	- Get the kernel int types of __u32 and friends from <asm/types.h>
	  if we can, otherwise define them ourselves.

xfsprogs-2.8.12 (29 August 2006)
	- Multi-thread modifications to xfs_repair.
	- Updated Polish translation, thanks to Jakub Bogusz.
	- Change default mkfs realtime extent size setting to
	  perform better for buffered writes.

xfsprogs-2.8.11 (08 August 2006)
	- xfs_repair prefetch optimisations.
	- Make many tools use direct I/O on Linux if the underlying
	  device supports it.  Mainly for speeding up xfs_repair as
	  libxfs does its own internal metadata buffering now.
	- Fix warnings from mkfs.xfs on ramdisk devices.
	- Fix issues with symbolic link handling in Makefiles.

xfsprogs-2.8.10 (02 August 2006)
	- Fix v2 directory rebuilds in phase6 of xfs_repair.
	- Fix buffer sizing issue for large pagesize systems,
	  affecting mkfs auto-device-type-detection heuristics.

xfsprogs-2.8.9 (18 July 2006)
	- Fix rpm issue with install targets as uid/gid zero (we now
	  using symbolic names rather than the numeric versions).

xfsprogs-2.8.8 (14 July 2006)
	- Fix issues with makedepend on libtool libraries.

xfsprogs-2.8.7 (10 July 2006)
	- Fix build of xfs_logprint for different uuid_t definitions;
	  thanks to Craig Rodrigues.

xfsprogs-2.8.6 (07 July 2006)
	- Fixed xfs_repair handling of duplicate names in a directory.

xfsprogs-2.8.5 (05 July 2006)
	- Update translation Makefile to work better with the Ubuntu
	  translation system.  Thanks to feedback from Martin Pitt.